--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-studio",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
@@ -30,7 +30,7 @@
     "recharts": "^1.1.0",
     "scriptjs": "^2.5.9",
     "slugify": "^1.3.4",
-    "studio-form": "0.4.10",
+    "studio-form": "^0.4.11",
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
@@ -49,6 +49,11 @@
     "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.16.4",
     "style-loader": "^0.23.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "studio-form": "^0.4.10"
   },
   "scripts": {
     "now-build": "yarn docz build",
