--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-studio",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
@@ -31,9 +31,8 @@
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "studio-form": "^0.4.11",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -51,9 +50,8 @@
     "style-loader": "^0.23.1"
   },
   "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "studio-form": "^0.4.10"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "scripts": {
     "now-build": "yarn docz build",
