--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-studio",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
@@ -27,12 +27,12 @@
     "rebound": "^0.1.0",
     "recharts": "^1.1.0",
     "scriptjs": "^2.5.9",
-    "slugify": "^1.3.4",
-    "use-react-router": "^1.0.7"
+    "slugify": "^1.3.4"
   },
   "devDependencies": {
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-dom": "16.8.6",
+    "studio-form": "^0.4.12",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -50,8 +50,9 @@
     "style-loader": "^0.23.1"
   },
   "peerDependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "studio-form": "^0.4.12"
   },
   "scripts": {
     "now-build": "yarn docz build",
