--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "recharts": "^1.1.0",
     "scriptjs": "^2.5.9",
     "slugify": "^1.3.4",
-    "use-react-router": "^1.0.7"
+    "use-react-router": "^1.0.7",
+    "studio-form": "^0.4.12"
   },
   "devDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "studio-form": "^0.4.11",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -52,8 +52,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "studio-form": "^0.4.10"
+    "react-dom": "^16.8.6"
   },
   "scripts": {
     "now-build": "yarn docz build",
