--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "component-studio",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "main": "dist/index.js",
-  "license": "MIT",
+  "license": "MIT toto",
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.10",
     "color": "^3.0.0",
     "date-fns": "^1.30.1",
     "emotion": "^9.2.6",
@@ -29,9 +27,11 @@
     "scriptjs": "^2.5.9",
     "slugify": "^1.3.4",
     "use-react-router": "^1.0.7",
-    "studio-form": "^0.4.12"
+    "studio-form": "^0.4.13"
   },
   "devDependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
     "react": "^16.8.6",
     "react-dom": "16.8.6",
     "@babel/cli": "^7.4.3",
@@ -52,7 +52,9 @@
   },
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10"
   },
   "scripts": {
     "now-build": "yarn docz build",
