--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "component-studio",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "main": "dist/index.js",
   "license": "MIT toto",
   "dependencies": {
     "color": "^3.0.0",
     "date-fns": "^1.30.1",
     "emotion": "^9.2.6",
-    "emotion-theming": "^10.0.10",
     "google-map-react": "^1.1.4",
     "keyboardjs": "^2.5.1",
     "lodash": "^4.17.10",
@@ -32,6 +31,7 @@
   "devDependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
+    "emotion-theming": "^10.0.10",
     "react": "^16.8.6",
     "react-dom": "16.8.6",
     "@babel/cli": "^7.4.3",
@@ -54,7 +54,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.10"
+    "@emotion/styled": "^10.0.10",
+    "emotion-theming": "^10.0.10"
   },
   "scripts": {
     "now-build": "yarn docz build",
